addDemoInfra
